Destructure brewery data and send to respective elements
I destructured pertinent data from the brewery object being passed in to
BreweryCard and passed each datapoint to their respective elements.

I also formatted the google maps directions url and made both anchor tags
link to their respective urls. I used '_blank' for the target attr in
order to link the user to a new window. I included rel='norefferer'
to prevent potential security vulnerabilities on older browsers. Google
maps is a trusted site but the added peace of mind plus react's linter
yelling at me motivated me to include it.

--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -1,8 +1,12 @@
 @import '../../index.scss';
 
 .breweryCard {
-  background-color: #E0CC99;
+  background-color: #e0cc99;
   min-height: 5rem;
   width: 100%;
   padding: 1rem;
+
+  .card-a {
+    cursor: pointer;
+  }
 }
